Refactored wrappers, added handlers & Pooling interface.